# CLec

./: .gitignore  CMakeLists.txt  README.md  code style.md
common/: array_1.c  elseif.c  factorial.c  for.c  function.c  function_why.c  if.c  switch.c  var_scope.c  while.c
lec1/: CMakeLists.txt  bitwise.c  circle.c  hello_world.c  horror.asm  lec1.pptx  logical.c  operators.c  sizeof_types.c  task1.txt  types.c  ~$lec1.pptx
lec10/: task10.txt
lec2/: CMakeLists.txt  array1.c  break.c  continue.c  elseif.c  for.c  goto.c  if.c  lec2.pptx  switch.c  task2.txt  while.c  с_string.c
lec3/: CMakeLists.txt  array_pointer.c  function_pointer.c  functions.c  lec3.pptx  pointer.c  pointer_operation.c  task3.txt  with_function.c  without_function.c
lec4/: CMakeLists.txt  argc_argv.c  calculator.c  lec4.pptx  task4.txt  var_scope.c  var_scope2.c  var_time.c
lec4/include/: calculator.h
lec4/src/: calculator.c  main.c
lec5/: CMakeLists.txt  enum.c  lec5.pptx  struct.c  task5.txt  typedef.c  union.c
lec5/include/: Math.h
lec5/src/: Math.c  main.c
lec6/: CMakeLists.txt  free.c  lec6.pptx  malloc.c  mem_usage.c  task6.txt  va_list.c
lec6/include/: List.h  Node.h
lec6/src/: List.c  Node.c
lec7/: CMakeLists.txt  file.c  file.txt  lec7.pptx  task7.txt
lec9/: task9.txt
